--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection" : "Server=localhost;port=5432;Database=WebLab3DB;User Id=postgres;Password=root"
+  }
 }
