--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@quasar/extras": "^1.16.4",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "chart.js": "^4.4.0",
+    "vue-chartjs": "^5.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.0",
