make basic auth system

--- a/backend/backend/appsettings.json
+++ b/backend/backend/appsettings.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection" : "Server=localhost;port=5432;Database=WebLab3DB;User Id=postgres;Password=root"
+    "DefaultConnection": "Server=localhost;port=5432;Database=WebLab3DB;User Id=postgres;Password=root"
+  },
+  "Keys": {
+    "JWTKey": "secretkeyforjwt123sfdfsffasfdsadfasfsadfsafdsfasdf"
   }
 }
